Complete AboutView localization

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,8 +3,22 @@
     "home": {},
     "about": {
       "personalProject": "This page is a personal project that I use as part of my studies to explore and learn both backend and frontend technologies. Initially, the project was built using plain HTML, CSS, and JavaScript, but I am now transitioning it into a full-stack application to meet the requirements of my studies.",
-      "backendDetails": "The backend is powered by <strong>Node.js</strong> and <strong>MongoDB</strong>, both of which are already implemented. I have also integrated <strong>JWT</strong> for secure user authentication. Moving forward, I will be enhancing the backend further with features like <strong>monitoring</strong> using <strong>Grafana</strong>, optimizing for scalability and performance. On the frontend, I am using <strong>Vue.js</strong> to create a dynamic, component-based user interface.",
-      "siteEvolution": "This site will continue to evolve as I develop my skills and add new features to meet the objectives of both the frontend and backend modules. Feel free to explore the features and technologies I've implemented. If you have any questions or just want to say hello, feel free to <router-link to='/contact'>contact me</router-link>.",
+      "backendIntro": "The backend is powered by",
+      "nodejs": "Node.js",
+      "and": "and",
+      "mongodb": "MongoDB",
+      "integration": ", both of which are already implemented. I have also integrated",
+      "jwt": "JWT",
+      "forAuth": "for secure user authentication. Moving forward, I will be enhancing the backend further with features like",
+      "monitoring": "monitoring",
+      "using": "using",
+      "grafana": "Grafana",
+      "backendConclusion": ", optimizing for scalability and performance. On the frontend, I am using",
+      "vuejs": "Vue.js",
+      "frontendConclusion": "to create a dynamic, component-based user interface.",
+      "siteEvolution": "This site will continue to evolve as I develop my skills and add new features to meet the objectives of both the frontend and backend modules. Feel free to explore the features and technologies I've implemented.",
+      "contactIntro": "If you have any questions or just want to say hello, feel free to",
+      "contactLinkText": "contact me",
       "thankYou": "Thank you for visiting and showing interest in my learning project!"
     },
     "contact": {
