Add "unknown" priority option to localization for task priorities

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -135,7 +135,8 @@
       "priorityColors": {
         "high": "High",
         "medium": "Medium",
-        "low": "Low"
+        "low": "Low",
+        "unknown": "Unknown"
       },
       "completed": "Completed"
     }
