Refactor TodoTable component to improve date formatting and priority handling; update tests for new functionality

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -122,6 +122,11 @@
       "priority": "Priorität",
       "done": "Erledigt",
       "invalidDate": "Ungültiges Datum",
+      "priorityOptions": {
+        "high": "Hoch",
+        "medium": "Mittel",
+        "low": "Niedrig"
+      },
       "priorityColors": {
         "high": "Hoch",
         "medium": "Mittel",
