--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -134,6 +134,11 @@
       "priority": "Priority",
       "done": "Done",
       "invalidDate": "Invalid Date",
+      "priorityOptions": {
+        "high": "High",
+        "medium": "Medium",
+        "low": "Low"
+      },
       "priorityColors": {
         "high": "High",
         "medium": "Medium",
