Implement dropdown menu in header for logout functionality and add translations

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -30,6 +30,12 @@
     }
   },
   "components": {
+    "header": {
+      "title": "Task Master",
+      "menu": {
+        "logout": "Ausloggen"
+      }
+    },
     "editTaskBox": {
       "editTaskDialog": {
         "title": "Aufgabe bearbeiten",
